# Spot_detection_Docker

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  constraints.txt  requirements.app.in  requirements.in  requirements.pypi.in  requirements.pypi.in.bak  requirements.txt  start_befehle.txt  start_camera_docker.sh
ros2_ws/: start_camera.sh
ros2_ws/src/detection_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/detection_msgs/msg/: LabeledDetections.msg
ros2_ws/src/ricoh_theta_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/ricoh_theta_ros/launch/: full_stack.launch.py
ros2_ws/src/ricoh_theta_ros/resource/Modell/: test.py
ros2_ws/src/ricoh_theta_ros/ricoh_theta_ros/: mosaic_viewer.py  ricoh_publisher copy.py  ricoh_publisher.py  yolo_detector.py
ros2_ws/src/theta_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/transform_to_map/: package.xml  setup.cfg  setup.py
ros2_ws/src/transform_to_map/config/: params.yaml  semantic_map.yaml
ros2_ws/src/transform_to_map/launch/: transform_to_map_launch.py
ros2_ws/src/transform_to_map/transform_to_map/: README.md  tf_publisher.py  transform_to_map_node.py
tmp/: all_reqs.txt  all_reqs_no_torch.txt
