<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transform_to_map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mcde1011@h-ka.de">dennis</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>detection_msgs</exec_depend>
  
  <depend>vision_msgs</depend>
  <depend>tf-transformations</depend>
  <depend>interactive_markers</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>tf-transformations</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>